Fixed overlap issue in mobile formatting, and cleaned up code

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -6,6 +6,7 @@
   position: fixed;
   width: 0;
   height: 0;
+  z-index: 5;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -14,6 +15,7 @@
 .dropdown-menu {
   position: relative;
   display: inline-block;
+  z-index: 6;
 
   &:hover .dropdown-menu-content {
     display:block;
@@ -40,7 +42,13 @@
   border: 1px solid black;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
   cursor: pointer;
-  z-index: 3;
+  position: relative;
+  z-index: 6;
+
+  @media screen and (max-width: 680px) {
+    padding: 0.5rem;
+    margin: 0.75rem;
+  }
 
   div {
     width: 35px;
@@ -55,17 +63,17 @@
   position: absolute;
   background-color: $dropdown-unselected;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 3;
   color: black;
   min-width: 8rem;
+  z-index: 6;
 
   a {
-    @include sans;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     font-size: 1rem;
+    @include sans;
   }
 }
 
@@ -82,13 +90,15 @@
 
 .wrapper {
   width: 650px;
-  @media screen and (max-width: 680px) {
-    width: 95%;
-  }
-
+  position: relative;
+  z-index: 2;
   margin-left: auto;
   margin-right: auto;
   @include clearfix;
+
+  @media screen and (max-width: 680px) {
+    width: calc(100vw - 16px)!important;
+  }
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -98,10 +108,11 @@
   margin-top: 1.5rem;
   border: 1px solid black;
   padding: 2rem 2rem 0.5rem;
-  @include bottom_shadow;
   background-color: #FFFFFF;
+  @include bottom_shadow;
+  
   @media screen and (max-width: 680px) {
-    margin-top: 5%;
+    margin-top: 8px;
   }
 
   .avatar {
@@ -115,30 +126,30 @@
   }
 
   .header-resume-name {
-    @include sans;
     font-size: 3rem;
     font-weight: 900;
     text-align: center;
     letter-spacing: -0.15rem;
     line-height: 1;
     margin: 1rem 0 0;
+    @include sans;
   }
 
   .title-bar {
-    @include section-break;
     margin-top: 2rem;
     margin-bottom: 0.5rem;
     padding: 0.4rem 0;
+    @include section-break;
     @include clearfix;
 
     .header-title {
-      @include sans;
       font-weight: 300;
       font-size: 1.75rem;
       line-height: 2rem;
       letter-spacing: -0.05rem;
       text-align: center;
       margin: 0 0 0.5rem;
+      @include sans;
 
       @include media_larger_than_mobile {
         float: left;
@@ -148,9 +159,10 @@
   }
 
   .executive-summary {
-    @include sans;
     font-size: 1rem;
     line-height: 1.75rem;
+    @include sans;
+
     @include media_larger_than_mobile {
       font-size: 1rem;
     }
@@ -214,6 +226,7 @@
   background:#FFFFFF;
   border-radius:5px;
   box-shadow:inset 0 0 0.2em 0 rgba(0,0,0,0.25);
+  z-index: 3;
 
   .inside {
     width:100%;
@@ -225,11 +238,11 @@
     .email-span {
       color: #000000;
       font-weight: bold;
+      position: relative;
     }
   }
 
   .button {
-    @include contact_button_transform;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -238,7 +251,7 @@
     cursor:pointer;
     -webkit-transform-origin: center bottom;
     transform-origin: center bottom;
-    z-index:2;
+    @include contact_button_transform;
 
     div {
       display: block;
@@ -251,7 +264,7 @@
 
     .front {
       background:#EFEFEF;
-      z-index:2;
+      position: absolute;
 
       span {
         font-size:0.7em;
@@ -260,14 +273,15 @@
         padding:0.65em 0;
         text-align:center;
         color:#444444;
+        position: absolute;
       }
     }
 
     .back {
       background:#333;
       transform: rotateX( 180deg );
-      z-index:2;
       box-shadow: 0 0.2em 0.2em 0 rgba(0,0,0,0.15);
+      position: absolute;
     }
   }
 
@@ -284,21 +298,21 @@
   border: 1px solid black;
   padding: 2rem 1.5rem 0.5rem;
   margin: 3rem 0 0rem;
-  @include bottom_shadow;
   background-color: #FFFFFF;
+  @include bottom_shadow;
 
   .section-header {
-    @include section-break;
     margin-bottom: 1rem;
     padding: 0.4rem 0;
+    @include section-break;
     @include clearfix;
 
     .section-title {
-      @include sans;
       font-weight: 900;
       font-size: 1.75rem;
       letter-spacing: -0.05rem;
       margin: 0;
+      @include sans;
 
       @include media_larger_than_mobile {
         float: left;
@@ -333,12 +347,12 @@
   }
 
   .resume-item-title {
-    @include sans;
     font-weight: 700;
     margin: 0 0 0.75rem;
     font-size: 1.5rem;
     letter-spacing: -0.05rem;
     line-height: 1;
+    @include sans;
 
     // Styling for any links in the title
     a {
@@ -354,18 +368,18 @@
   }
 
   .resume-item-details {
-    @include sans;
     font-weight: 400;
     font-size: 1.15rem;
     margin: 0 0 0.75rem;
     line-height: 1;
+    @include sans;
 
     h4 {
-      @include sans;
       font-weight: 400;
       font-size: 1.15rem;
       margin: 0 0 0.75rem;
       line-height: 1;
+      @include sans;
     }
 
     .resume-item-details-duration {
@@ -374,9 +388,10 @@
   }
 
   .resume-item-summary, .resume-item-list {
-    @include sans;
     margin: 0.75rem 0 0;
     font-size: 1rem;
+    @include sans;
+
     li {
       padding: 0.3rem 0 0;
     }
